Add html pages to Views and add code for getting form input, calling countRepeats, and displaying results to HomeModule

--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,1 +1,13 @@
 <h1>Word Frequency Counter</h1>
+
+<form action="/result" method="post">
+  <label for="sentence">Enter a sentence:</label>
+  <input type="text" name="sentence" value="" style="width: 500px;">
+  <br>
+  <br>
+  <label for="searchTerm">Enter a word to search for:</label>
+  <input type="text" name="searchTerm" value="">
+  <br>
+  <br>
+  <button type="submit">Submit</button>
+</form>
