--- a/Views/result.cshtml
+++ b/Views/result.cshtml
@@ -1,1 +1,6 @@
 <h1>Results:</h1>
+
+<p style="font-size: 18px;">The term <strong>'@Model[0]'</strong> appears <strong>@Model[2]</strong> @(Model[2]=="1" ? "time":"times") in:</p>
+<p style="font-size: 18px;"><i>@Model[1]</i></p>
+
+<a href="/">Back</a>
